# enGitsDataLib

./: .gitignore  CMakeLists.txt  Doxyfile  LICENSE  doxy.sh  header.html  licence_header.txt  license_header.txt  list.cpp  list.h  mathvector.h  smallsquarematrix.h  test_endianness.py  tlist.h  tmappedvar.h  tmdimindex.h  tmdimlist.h  tmdimvar.h  tsdimvar.h  varcontainer.h
edl/: CMakeCache.txt  amr.h  bmap.h  containertricks.h  csvreader.cpp  csvreader.h  doctest.h  edl.cpp  edl.h  edlerror.cpp  edlerror.h  fastremovelist.h  geometrytools.cpp  geometrytools.h  interpolation.h  interpolationcurve.cpp  interpolationcurve.h  linsolve.h  list.cpp  list.h  lsqgrad.h  lsqgradinterpolation.h  lsqinterpolation.h  mathvector.h  mathvector_methods.h  mathvector_operators.h  mathvector_structs.h  multidimvector.h  octree.h  octreesorting.h  optimise.h  pmap.h  pointcloudsurface.h  profile.cpp  profile.h  quicktimer.h  searchtree.h  shortdeltavector.h  shortptrvector.h  shortvector.h  (+27 more)
tests/: CMakeLists.txt  csv_test.cpp  doctest_test.cpp  geometrytools_test.cpp  interp_test.cpp  lsq_test.cpp  noQT_test.cpp  pointcloud_test.cpp  sphere_test.mesh  test.csv  test_box.mesh  tgraph_test.cpp  tools_test.cpp
